# build-top

./: CHANGELOG.md  README.md  TODO.md  build-top.cabal  cabal.project  hie.yaml
.github/workflows/: haskell.yml
src/: BuildTop.hs
src-exe/: Main.hs
src/BuildTop/: Debug.hs  Filesystem.hs  Filters.hs  Loop.hs  Paths.hs  State.hs  Types.hs  Util.hs  Watcher.hs
