cabal-version:      3.0
name:               build-top
version:            0.1.0.0
synopsis:           Monitor running Gentoo builds

-- A longer description of the package.
-- description:
homepage:           https://github.com/hololeap/build-top

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable build-top
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        build-top

    hs-source-dirs:   src-exe
    default-language: Haskell2010

test-suite build-top-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
