cabal-version:      3.0
name:               build-top
version:            0.1.0.0
synopsis:           Monitor running Gentoo builds

tested-with:        GHC == { 9.0.2, 9.2.8, 9.4.8 }

description:
    Watches the build directory for Portage and displays running builds
    in a TUI.

homepage:           https://github.com/hololeap/build-top
bug-reports:        https://github.com/hololeap/build-top/issues

license:            AGPL-3.0-only
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@protonmail.com

copyright:          Copyright (C) 2023 hololeap
category:           System
extra-doc-files:
    , CHANGELOG.md
    , README.md
    , TODO.md

source-repository head
    type:           git
    location:       git://github.com/hololeap/build-top.git
    branch:         main
    subdir:         portage-hs

flag pedantic
    description: Enable -Werror
    default:     False
    manual:      True

common all
    ghc-options:        -Wall
                        -foptimal-applicative-do
    if flag(pedantic)
        ghc-options:    -Werror

common fast
    ghc-options:        -threaded
                        -with-rtsopts=-N

library
    import: all
    exposed-modules:
        , BuildTop.Debug
        , BuildTop.Filesystem
        , BuildTop.Filters
        , BuildTop.Loop
        , BuildTop.Paths
        , BuildTop.State
        , BuildTop.Types
        , BuildTop.Util
        , BuildTop.Watcher

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base >=4.14 && <4.18
        , async
        , bytestring
        , containers
        , directory
        , filepath
        , hashable
        , linux-inotify >=0.3
        , mtl
        , parsable
        , portage-hs
        , pretty-simple
        , reflex >=0.9
        , text
        , these
        , transformers
        , unordered-containers
        , witherable
    hs-source-dirs:   src
    default-language: Haskell2010

executable build-top
    import: all
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base >=4.14 && <4.18
        , build-top
        , linux-inotify
        , mtl
        , pretty-simple
        , reflex
        , transformers
        , unordered-containers

    hs-source-dirs:   src-exe
    default-language: Haskell2010

test-suite build-top-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        , base >=4.14 && <4.18
